[tool.poetry]
name = "stefan-dataframe-utils"
version = "0.1.0"
description = ""
authors = ["Stefan Bader <baderstefan@gmx.de>"]
packages = [
    {include="stefan_dataframe_utils", from="src/main/python/"}
]

[tool.poetry.dependencies]
python = "^3.10"
python-json-logger = "^2.0.2"
numpy = "^1.22.3"
pandas = "^1.4.1"
pyarrow = "^7.0.0"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13.4"
mypy = "^0.942"
black = "^22.3.0"

[tool.mypy]
strict = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
